Sync workspace: latest UI updates and fixes

--- a/mcp-client/ui/order_wos.html
+++ b/mcp-client/ui/order_wos.html
@@ -352,6 +352,7 @@ WHERE line.WORKOBJECTSTATUS = :status `;
       } else if (entity === 'ORDER') {
         sql = `SELECT 
     sub.cartid As CARTID, 
+    ful.TRANSACTIONTYPE,
     conf.ordernumber as OrderNumber,
     conf.locationcode as LocationCode,
     sub.WORKOBJECTSTATUS as CART_WORKOBJECTSTATUS,
@@ -384,7 +385,8 @@ WHERE conf.WORKOBJECTSTATUS = :status`;
         params['status'] = status || '';
       } else if (entity === 'CART') {
         sql = `SELECT 
-    sub.cartid As CARTID, 
+    sub.cartid As CARTID,
+    ful.TRANSACTIONTYPE, 
     conf.ordernumber as OrderNumber,
     conf.locationcode as LocationCode,
     sub.WORKOBJECTSTATUS as CART_WORKOBJECTSTATUS,
